Added some styles for the activity container, its text and the type

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,3 +7,22 @@
 body {
     font-family: 'Commissioner', sans-serif;
 }
+
+.activity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.activity__text {
+    font-weight: 600;
+    font-size: 8rem;
+    text-align: center;
+}
+
+.activity__type {
+    font-weight: 300;
+    font-size: 2rem;
+}
