--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,3 +26,12 @@ body {
     font-weight: 300;
     font-size: 2rem;
 }
+
+.tip {
+    position: absolute;
+    left: 50%;
+    bottom: 50px;
+    transform: translate(-50%);
+    font-weight: 200;
+    font-size: 2.5rem;
+}
