Responsive font sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,10 @@ body {
     font-family: 'Commissioner', sans-serif;
 }
 
+.app {
+    padding: 0 1rem;
+}
+
 .activity {
     display: flex;
     flex-direction: column;
@@ -18,13 +22,13 @@ body {
 
 .activity__text {
     font-weight: 600;
-    font-size: 8rem;
+    font-size: clamp(4rem, 5vw, 8rem);
     text-align: center;
 }
 
 .activity__type {
     font-weight: 300;
-    font-size: 2rem;
+    font-size: clamp(1rem, 5vw, 2rem);
 }
 
 .tip {
@@ -33,5 +37,5 @@ body {
     bottom: 50px;
     transform: translate(-50%);
     font-weight: 200;
-    font-size: 2.5rem;
+    font-size: clamp(1.25rem, 5vw, 2.25rem);
 }
