Changed some styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,15 +9,16 @@ body {
 }
 
 .app {
-    padding: 0 1rem;
-}
-
-.activity {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    padding: 0 1rem;
+}
+
+.activity {
+    margin-top: auto;
 }
 
 .activity__text {
@@ -29,13 +30,12 @@ body {
 .activity__type {
     font-weight: 300;
     font-size: clamp(1rem, 5vw, 2rem);
+    text-align: center;
 }
 
 .tip {
-    position: absolute;
-    left: 50%;
-    bottom: 2%;
-    transform: translate(-50%);
+    margin-top: auto;
+    margin-bottom: 2rem;
     font-weight: 200;
     font-size: clamp(1.25rem, 5vw, 2.25rem);
     text-align: center;
